@@ -106,7 +106,6 @@ ATTR_ADDRESS = "address"
 ATTR_CALLBACK_HOST = "callback_host"
 ATTR_CALLBACK_PORT = "callback_port"
 ATTR_CHANNELS = "channels"
-ATTR_ENTITY_TYPE = "entity_type"
 ATTR_ERROR = "error"
 ATTR_HOST = "host"
 ATTR_INTERFACE = "interface"
@@ -114,7 +113,6 @@ ATTR_INTERFACE_ID = "interface_id"
 ATTR_ID = "id"
 ATTR_IP = "ip"
 ATTR_JSON_PORT = "json_port"
-ATTR_MODEL = "model"
 ATTR_NAME = "name"
 ATTR_PASSWORD = "password"
 ATTR_PARAMETER = "parameter"
@@ -124,7 +122,6 @@ ATTR_RESULT = "result"
 ATTR_SESSION_ID = "_session_id_"
 ATTR_TLS = "tls"
 ATTR_TYPE = "type"
-ATTR_FUNCTION = "function"
 ATTR_SUBTYPE = "subtype"
 ATTR_USERNAME = "username"
 ATTR_VALUE = "value"
@@ -315,13 +312,6 @@ class HmPlatform(StrEnum):
     SIREN = "siren"
     SWITCH = "switch"
     TEXT = "text"
-
-
-class HmEntityType(StrEnum):
-    """Enum with hahomematic entity types."""
-
-    GENERIC = "generic"
-    CUSTOM = "custom"
 
 
 class HmEventType(StrEnum):
