@@ -3,7 +3,8 @@ Version 2022.7.15 (2022-07-30)
 - Remove properties of final members
 - Add types to Final
 - Init entity fields in init method
-- Remove DeviceInfo
+- Remove device_info from model
+- Remove attributes from model
 
 Version 2022.7.14 (2022-07-28)
 - Add HmIP-BS2 to custom entities
